# zhongwen

./: .gitignore  .test_chinese.py.swp  README.md  chinese.py  pyproject.toml  tasks.py  test.docx  test_chinese.py  test_law.py  test_zhongwen.py  zhongwen.py  審計報告.py
FalV/: manifest.csv  schema.csv
MingLing/: manifest.csv
resource/: fhopecc.xlsb
tests/: test_batch_data.py  test_date.py  test_hllaw.py  test_law.py  test_number.py  test_office_document.py  test_org.py  test_pdf.py  test_python.py  test_python_dev.py  test_text.py  test_zhongwen.py  取錯誤位置清單測例日記帳.txt  測圖.py  測地址.py  測地號.py  測帳.py  測庫.py  測快取.py  測數.py  測文.py  測時.py  測時序.py  測智.py  測檔.py  測法規.py  測表.py  測試時序分析.py  測試法人.py  測試法規.py  測試消防法規.py  測試自動完成.py  測試花蓮縣法規.py  測試表.py  測開放街圖.py  華德福查核表.txt  表測例甲.txt
workflows/: main.yml
zhongwen/: batch_data.py  date.py  file.py  geopandas_tools.py  hllaw.py  html.py  law.py  markdown.py  number.py  ocr.py  office_document.lark  office_document.py  org.py  pandas_tools.py  pdf.py  python.py  python_dev.py  template.docx  test_file.py  test_law.py  text.py  windows.py  winman.py  中央法規.py  交通事故.py  信.py  偶.py  公共設施管線圖.py  公有土地.py  公設設施管線圖.py  原住民行政.py  國土利用調查成果圖.py  圖.py  土地稅.py  地圖.py  地址.py  地籍圖.py  地號.py  審計報告.py  小狼毫輸入法.py  (+32 more)
zhongwen/resource/: BIAU1.TXT  Excel 自訂.exportedUI  Normal.dotm  Word 自訂.exportedUI  fhopecc.dotm  fhopecc.xlam  fhopecc.xlsb  fhopecc_addin.dotm  借項關鍵字  停用詞.csv  審核報告範本.docx  貸項關鍵字
zhongwen/定義表/: 1000901建築物使用類組代碼.xlsx  使用牌照稅判讀管理代號.ppt  公文校正字典.csv  國土利用屬性欄位表.xlsx  土地利用代碼.xlsx  地籍圖屬性資料說明表.txt  建築物使用類組使用項目舉例.xlsx  所有權人檔(LNDT202).xls  持分人檔(HOUT120).xls  用電代碼.xlsx  稅地種類檔(LNDT203).xls  課稅主檔(HOUT110).xls
