[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zhongwen"
version = "5.29"
authors = [
  { name="fhopecc", email="fhopecc@gmail.com" },
]
description = "中文數轉換、字元切換、翻譯、民國紀年處理等中文工具"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["diskcache"
               ,"pandas", "pygtrans", "marisa_trie"
               ,"selenium"
               ,"requests"
               ,"winshell", "pywin32", "comtypes"
               ,"python-docx", "lark"
               ,"clipboard"
]
[project.urls]
"Homepage" = "https://github.com/fhopecc/zhongwen"
"Bug Tracker" = "https://github.com/fhopecc/zhongwen/issues"
