[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zhongwen"
version = "5.35.14"
authors = [
  { name="fhopecc", email="fhopecc@gmail.com" },
]
description = "以中文命名之文、數、時、表及檔等處理工具集。"
readme = "README.md"
license = {text = "GPL-3.0-only"} 
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["diskcache"
               ,"pandas", "pygtrans", "marisa_trie"
               ,"selenium"
               ,"requests"
               ,"hanlp"
               ,"opencc"
               ,"winshell", "pywin32", "comtypes"
               ,"python-docx", "lark"
               ,"clipboard"
               ,"pytesseract"
               ,"pdf2image"
               ,"pypdf"
               ,"PyMuPDF"
               ,"PyPDF2"
]
[project.urls]
"Homepage" = "https://github.com/fhopecc/zhongwen"
"Bug Tracker" = "https://github.com/fhopecc/zhongwen/issues"
